--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ default = ["console_error_panic_hook"]
 [dependencies]
 wasm-bindgen = "0.2.63"
 js-sys = "0.3.64"
+fixedbitset = "0.4.2"
 
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
