On branch main Your branch is up to date with 'wasm-game-of-life/main'.
Добавил инструментарий для логирования и отладки функционала в браузере

Changes to be committed:
	modified:   Cargo.toml
	modified:   src/lib.rs
	modified:   www/index.js

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,14 @@ console_error_panic_hook = { version = "0.1.6", optional = true }
 # allocator, however.
 wee_alloc = { version = "0.4.5", optional = true }
 
+
+#специальная зависимость для возможности вызова console.log
+[dependencies.web-sys]
+version = "0.3"
+features = [
+  "console",
+]
+
 [dev-dependencies]
 wasm-bindgen-test = "0.3.13"
 
